--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         <activity android:name=".identitymanager.identitycreate.MnemonicBackupPreviewActivity" />
         <activity android:name=".identitymanager.identitycreate.MnemonicBackupConfirmActivity" />
         <activity android:name=".wallet.walletsetting.WalletSettingActivity" />
-        <activity android:name=".wallet.manager.WalletManagerActivity"></activity>
+        <activity android:name=".wallet.manager.WalletManagerActivity" />
+        <activity android:name=".wallet.export.ExportWalletContentActivity" />
+        <activity android:name=".wallet.token.TokenManagerActivity"></activity>
     </application>
 
 </manifest>
