--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
 
 }
