--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         <activity android:name=".wallet.walletsetting.WalletSettingActivity" />
         <activity android:name=".wallet.manager.WalletManagerActivity" />
         <activity android:name=".wallet.export.ExportWalletContentActivity" />
-        <activity android:name=".wallet.token.TokenManagerActivity"></activity>
+        <activity android:name=".wallet.token.TokenManagerActivity" />
+        <activity android:name=".common.qrCode.QRCodeScanActivity" />
+        <activity android:name=".wallet.transaction.TransactionActivity" />
+        <activity android:name=".wallet.transaction.SendActivity" />
+        <activity android:name=".wallet.transaction.ReceiveActivity"></activity>
     </application>
 
 </manifest>
