--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,10 +53,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    implementation 'io.reactivex:rxjava:1.3.8'
-    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.web3j:core:4.2.0-android'
+    implementation 'com.github.goodforgod:java-etherscan-api:1.0.2'
 }
