--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".setting.TransactionDetailActivity"></activity>
+        <activity android:name=".setting.NodeSettingActivity"></activity>
+        <activity android:name=".setting.TransactionDetailActivity" />
         <activity android:name=".createmanager.walletimport.ImportWalletActivity" />
         <activity android:name=".setting.message.moretransaction.MoreTransactionMessageActivity" />
         <activity android:name=".setting.message.HistoryMessageActivity" />
