--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,15 +56,12 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
-//    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-//    implementation 'com.squareup.retrofit2:converter-jackson:2.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-//    implementation 'org.web3j:core:4.2.0-android'
-//    implementation 'com.github.goodforgod:java-etherscan-api:1.0.2'
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.github.TrustWallet:trust-web3-provider:0.2.1'
