--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,13 @@
     <application
         android:name=".App"
         android:allowBackup="false"
-        android:icon="@mipmap/wallet_ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".setting.SettingsActivity"/>
+        <activity android:name=".setting.LanguagesActivity"></activity>
+        <activity android:name=".setting.SettingsActivity" />
         <activity android:name=".createmanager.walletrecover.WalletIdentityRecoveryActivity" />
         <activity android:name=".setting.AboutWeActivity" />
         <activity android:name=".wallet.token.Erc1400DetailActivity" />
@@ -63,9 +62,6 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".wallet.token.TokenManagerActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".common.qrCode.QRCodeScanActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".wallet.transaction.TransactionActivity"
