--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.idhub.wallet">
 
     <application
+        tools:replace="android:allowBackup"
         android:name=".App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
