--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,7 +114,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.com.wallet.fileprovider"
+            android:authorities="com.idhub.wallet.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
