--- a/config/build.gradle
+++ b/config/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.library'
-apply plugin: 'org.greenrobot.greendao'
+
 android {
     compileSdkVersion 28
+
+
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -18,26 +20,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+
 }
-greendao {
-    schemaVersion 1
-    daoPackage 'com.idhub.base.greendao.db'
-    targetGenDir 'src/main/java'
-}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api 'org.greenrobot:greendao:3.2.2'
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    api 'com.google.code.gson:gson:2.8.5'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.multidex:multidex:2.0.0'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api project(path: ':module_update')
-    api project(path: ':config')
-    implementation project(path: ':etherscan')
 }
