--- a/basemoudle/build.gradle
+++ b/basemoudle/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     api project(path: ':module_update')
     api project(path: ':config')
     implementation project(path: ':etherscan')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
