--- a/basemoudle/build.gradle
+++ b/basemoudle/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.multidex:multidex:2.0.0'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    api 'com.squareup.retrofit2:converter-jackson:2.0.0'
     api project(path: ':module_update')
     api project(path: ':config')
     implementation project(path: ':etherscan')
