--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".assets.ClaimsActivity"></activity>
+        <activity android:name=".assets.CollectionDetailActivity"></activity>
+        <activity android:name=".assets.CollectionListActivity" />
+        <activity android:name=".assets.ClaimsActivity" />
         <activity android:name=".wallet.token.activity.TokenRemoveActivity" />
         <activity android:name=".setting.UserInfoShowActivity" />
         <activity android:name=".common.zxinglib.QrCodeActivity" />
@@ -124,10 +126,10 @@
 
         <meta-data
             android:name="design_width_in_dp"
-            android:value="375"/>
+            android:value="375" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="667"/>
+            android:value="667" />
     </application>
 
 </manifest>
