--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".assets.CollectionDetailActivity"></activity>
+        <activity android:name=".assets.CollectionOptionsActivity"></activity>
+        <activity android:name=".assets.CollectionTransactionActivity" />
+        <activity android:name=".assets.CollectionDetailActivity" />
         <activity android:name=".assets.CollectionListActivity" />
         <activity android:name=".assets.ClaimsActivity" />
         <activity android:name=".wallet.token.activity.TokenRemoveActivity" />
