--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".auth.AutoInfoActivity"></activity>
+        <activity android:name=".auth.AuthInfoActivity"></activity>
         <activity android:name=".assets.CollectionOptionsActivity" />
         <activity android:name=".assets.CollectionTransactionActivity" />
         <activity android:name=".assets.CollectionDetailActivity" />
