--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,10 @@
         android:theme="@style/WalletAppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".auth.AuthInfoActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".assets.STListActivity"></activity>
+        <activity
+            android:name=".auth.AuthInfoActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".assets.CollectionOptionsActivity" />
         <activity android:name=".assets.CollectionTransactionActivity" />
         <activity android:name=".assets.CollectionDetailActivity" />
